# comic-panel-splitter

./: LICENSE  README.md  pyproject.toml
comic_panel_splitter/: main.py
