[tool.poetry]
name = "comic-panel-splitter"
version = "0.1.0"
description = "A tool for splitting pages of a comic book into panels"
authors = ["Michael Rader <mrader1248@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
